# window_manager_cpp

./: .gitignore  CMakeLists.txt  build_run.sh
test/: CMakeLists.txt  main.cpp
window_manager/: CMakeLists.txt
window_manager/include/window_manager/: window_manager.hpp
window_manager/src/: window_manager.cpp
window_manager/src/wayland/: wayland_window_manager.cpp  wayland_window_manager.hpp
